Potential Oauth fix
