# routes/auth.js
@@ -4,15 +4,15 @@ const router = express.Router();
 
 router.get('/github', passport.authenticate('github', { scope: ['user:email'] }));
 
-router.get('/github/callback', passport.authenticate('github', { failureRedirect: '/' }),
-  (req, res) => {
-    res.redirect('/dashboard');
-  });
+router.get('/github/callback', passport.authenticate('github', { failureRedirect: '/', successRedirect: './campaign' })
+);
 
-router.get('/logout', (req, res) => {
+router.get('/logout', (req, res, next) => {
   req.logout(err => {
     if (err) return next(err);
-    res.redirect('/');
+    req.session.destroy(() => {
+      res.redirect('/');
+    });
   });
 });
 
